# NLP-debias

./: .env.sample  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: code-quality.yaml
src/: __init__.py  constants.py  eval_model.py  main.py  models.py  train.py  unsloth_load.py  utils.py
src/bias_classifier/: constants.py  dataset.py  debug.py  eval.py  main.py  train.py  utils.py
src/binary_classifier/: eval.py  main.py  train.py
src/cot_dataset/: constants.py  generate.py  prompts.py
src/dataset/: constants.py  download.py  enums.py  preprocess.py  utils.py
src/evaluation/: constants.py  eval_model.py  models.py  utils.py
src/iterative_dpo/: constants.py  main.py  models.py  utils.py
src/judge/: constants.py  llm_judge.py  main.py  models.py  prompt.py  utils.py
src/rl/: hybrid_model.py  llm_judge.py  main.py  prompt.py  utils.py
src/sft/: train.py  utils.py
src/soft_label_distil/: models.py  train.py  trainer.py  utils.py
