[project]
name = "nlp-debiasing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.13",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "mlflow>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.56.1",
    "torch>=2.8.0",
    "datasets>=4.1.0",
    "accelerate>=1.10.1",
    "bitsandbytes>=0.41.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
]
